fixed text-align

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -135,6 +135,10 @@ h2 {
     float:left;
 }
 
+.right-about-card > h2 {
+    text-align: right;
+}
+
 hr{
     border-top: 1px solid #777777;
     width:100%;
